* 0.12.0 (unreleased)
   * Quality of Life
      * Added colourblind correction mode
      * Exposed more colourblind options to the user
      * Can modify game speed directly instead of using a slowmode difficulty for accessibility
      * Messages get folded instead of repeating
      * Asteroids no longer fade out if close to the player
   * Engine
      * Fixed ai.idir giving wrong answer by M_PI_2 in some cases
      * Threaded more loading components
      * Lua require now caches chunks
      * Dropped SDL_image fallback

* 0.11.1 (unreleased)
   * Fixed race condition in threadpool
   * Fixed asteroids spawning in not proper shapes
   * Fixed autonav wobble and overshooting
   * Point defense won't shoot at disabled pilots anymore
   * Fixed battery descriptions
   * Discovering a hidden jump will make both directions known
   * Fixed AI trying to scan hostile targets they lost track of
   * `kidnapped/traffic_00`: fixed formating string telling the player what system to go to
   * `kidnapped/traffic_01`: ship should spawn if taking off in the same system, not just jumping in
   * `tutorial/nelly01`: fixed derelict message not appearing
   * `minerva/pirate4`: fixed save me spam only being print once
   * `seek_n_destroy`: fixed warnings when taking off in the same system
   * Fixed many typos
   * Translation updates

* 0.11.0
   * Fixed beams only showing hit explosions on one target being hit instead of all
   * Consider beam width when computing collisions
   * Made beam effects a bit thinner
   * Point defense weapons should track fighters much better now
   * Fixed point defense weapons not firing properly
   * Approach no longer instantly starts autonav unless a space object or derelict is already targeted
   * Tweaked the approach logic to prefer planets over pilots when only planet is selected
   * Approach should no longer play extraneous target sounds
   * Stores now show amount for unique outfits, while equipment windows shall not